[package]
name = "web-midi"
version = "0.1.0"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"

[dependencies]
web-sys = {version = "0.3.45", features = ["console", "Document", "Element", "HtmlElement", "MidiAccess", "MidiOptions", "MidiInputMap", "MidiOutputMap", "Node", "Window", "Navigator"]}
js-sys = "0.3.45"
wasm-bindgen="0.2.68"
wasm-bindgen-futures="0.4.18"
