[package]
name = "web-midi"
version = "0.1.0"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Wraps the web-midi calls from the web-sys library in a more rusty interface"
repository = "https://github.com/mendelt/web-midi"
categories = ["api-bindings", "wasm", "multimedia::audio"]
keywords = ["midi", "wasm"]
readme = "README.md"

[dependencies]
web-sys = {version = "0.3.45", features = ["console", "MidiAccess", "MidiInput", "MidiInputMap", "MidiOptions", "MidiOutput", "MidiOutputMap", "MidiPort", "MidiPortConnectionState", "MidiPortDeviceState", "Navigator"]}
js-sys = "0.3.45"
wasm-bindgen="0.2.68"
wasm-bindgen-futures="0.4.18"
