
[package]
name = "list-interfaces"
version = "0.1.0"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
async-std = {version = "1.6"}
web-sys = {version = "0.3.45", features = ["console", "Document", "Element", "HtmlElement", "Node", "Window", "Navigator"]}

web-midi = {path="../.."}
